--- a/index.html
+++ b/index.html
@@ -3,16 +3,6 @@
 	<head>
 		<title>map created with amCharts | amCharts</title>
 		<meta name="description" content="map created using amCharts pixel map generator" />
-
-		<!--
-			This map was created using Pixel Map Generator by amCharts and is licensed under the Creative Commons Attribution 4.0 International License.
-			You may use this map the way you see fit as long as proper attribution to the name of amCharts is given in the form of link to https://pixelmap.amcharts.com/
-			To view a copy of this license, visit http://creativecommons.org/licenses/by/4.0/
-
-			If you would like to use this map without any attribution, you can acquire a commercial license for the JavaScript Maps - a tool that was used to produce this map.
-			To do so, visit amCharts Online Store: https://www.amcharts.com/online-store/
-		-->
-
 		<!-- amCharts javascript sources -->
 		<script type="text/javascript" src="https://www.amcharts.com/lib/3/ammap.js"></script>
 		<script type="text/javascript" src="https://www.amcharts.com/lib/3/maps/js/europeLow.js"></script>
@@ -44,6 +34,22 @@
 						],
 						"areas": [
 							{
+								"id": "LU", // Luxembourg
+								"title": "Freeland 44", // Updated title for Luxembourg
+								"color": "rgba(0,255,0,0.8)" // Change color if needed
+							},
+							{
+								"id": "JE", // Jersey
+								"title": "Freeland 45", // Updated title for Jersey
+								"color": "rgba(0,0,255,0.8)" // Change color if needed
+							},
+							{
+								"id": "GG", // Guernsey
+								"title": "Freeland 46", // Updated title for Guernsey
+								"color": "rgba(255,255,0,0.8)" // Change color if needed
+							},
+							// Other regions as you already have
+							{
 								"id": "RU",
 								"title": "Free Land 2",
 								"color": "rgba(255,0,0,0.8)"
@@ -58,211 +64,7 @@
 								"title": "Free Land 36",
 								"color": "rgba(255,0,0,0.8)"
 							},
-							{
-								"id": "TR",
-								"title": "Free Land 28",
-								"color": "rgba(255,0,0,0.8)"
-							},
-							{
-								"id": "SE",
-								"title": "Free Land 5",
-								"color": "rgba(255,0,0,0.8)"
-							},
-							{
-								"id": "SI",
-								"title": "Free Land 21",
-								"color": "rgba(255,0,0,0.8)"
-							},
-							{
-								"id": "SK",
-								"title": "Free Land 33",
-								"color": "rgba(255,0,0,0.8)"
-							},
-							{
-								"id": "RS",
-								"title": "Free Land 31",
-								"color": "rgba(255,0,0,0.8)"
-							},
-							{
-								"id": "RO",
-								"title": "Free Land 34",
-								"color": "rgba(255,0,0,0.8)"
-							},
-							{
-								"id": "PT",
-								"title": "Free Land 11",
-								"color": "rgba(255,0,0,0.8)"
-							},
-							{
-								"id": "PL",
-								"title": "Free Land 18",
-								"color": "rgba(255,0,0,0.8)"
-							},
-							{
-								"id": "SJ",
-								"title": "Free Land 1",
-								"color": "rgba(255,0,0,0.8)"
-							},
-							{
-								"id": "NO",
-								"title": "Free Land 4",
-								"color": "rgba(255,0,0,0.8)"
-							},
-							{
-								"id": "ME",
-								"title": "Free Land 24",
-								"color": "rgba(255,0,0,0.8)"
-							},
-							{
-								"id": "MK",
-								"title": "Free Land 27",
-								"color": "rgba(255,0,0,0.8)"
-							},
-							{
-								"id": "MD",
-								"title": "Free Land 35",
-								"color": "rgba(255,0,0,0.8)"
-							},
-							{
-								"id": "LV",
-								"title": "Free Land 39",
-								"color": "rgba(255,0,0,0.8)"
-							},
-							{
-								"id": "LT",
-								"title": "Free Land 38",
-								"color": "rgba(255,0,0,0.8)"
-							},
-							{
-								"id": "KV",
-								"title": "Free Land 30",
-								"color": "rgba(255,0,0,0.8)"
-							},
-							{
-								"id": "IS",
-								"title": "Free Land 6",
-								"color": "rgba(255,0,0,0.8)"
-							},
-							{
-								"id": "IE",
-								"title": "Free Land 8",
-								"color": "rgba(255,0,0,0.8)"
-							},
-							{
-								"id": "HU",
-								"title": "Free Land 32",
-								"color": "rgba(255,0,0,0.8)"
-							},
-							{
-								"id": "HR",
-								"title": "Free Land 22",
-								"color": "rgba(255,0,0,0.8)"
-							},
-							{
-								"id": "GR",
-								"title": "Free Land 26",
-								"color": "rgba(255,0,0,0.8)"
-							},
-							{
-								"id": "GE",
-								"title": "Free Land 43",
-								"color": "rgba(255,0,0,0.8)"
-							},
-							{
-								"id": "FR",
-								"title": "Free Land  9",
-								"color": "rgba(255,0,0,0.8)"
-							},
-							{
-								"id": "FI",
-								"title": "Free Land 3",
-								"color": "rgba(255,0,0,0.8)"
-							},
-							{
-								"id": "EE",
-								"title": "Free Land 40",
-								"color": "rgba(255,0,0,0.8)"
-							},
-							{
-								"id": "ES",
-								"title": "Free Land 10",
-								"color": "rgba(255,0,0,0.8)"
-							},
-							{
-								"id": "GB",
-								"title": "Free Land 7",
-								"color": "rgba(255,0,0,0.8)"
-							},
-							{
-								"id": "DK",
-								"title": "Free Land 17",
-								"color": "rgba(255,0,0,0.8)"
-							},
-							{
-								"id": "DE",
-								"title": "Free Land 14",
-								"color": "rgba(255,0,0,0.8)"
-							},
-							{
-								"id": "CZ",
-								"title": "Free Land 19",
-								"color": "rgba(255,0,0,0.8)"
-							},
-							{
-								"id": "CH",
-								"title": "Free Land 13",
-								"color": "rgba(255,0,0,0.8)"
-							},
-							{
-								"id": "BY",
-								"title": "Free Land 37",
-								"color": "rgba(255,0,0,0.8)"
-							},
-							{
-								"id": "BA",
-								"title": "Free Land 23",
-								"color": "rgba(255,0,0,0.8)"
-							},
-							{
-								"id": "BG",
-								"title": "Free Land 29",
-								"color": "rgba(255,0,0,0.8)"
-							},
-							{
-								"id": "BE",
-								"title": "Free Land 16",
-								"color": "rgba(255,0,0,0.8)"
-							},
-							{
-								"id": "AZ",
-								"title": "Free Land 42",
-								"color": "rgba(255,0,0,0.8)"
-							},
-							{
-								"id": "AT",
-								"title": "Free Land 20",
-								"color": "rgba(255,0,0,0.8)"
-							},
-							{
-								"id": "AM",
-								"title": "Free Land 44",
-								"color": "rgba(255,0,0,0.8)"
-							},
-							{
-								"id": "AL",
-								"title": "Free Land 25",
-								"color": "rgba(255,0,0,0.8)"
-							},
-							{
-								"id": "IT",
-								"title": "Free Land 12",
-								"color": "rgba(255,0,0,0.8)"
-							},
-							{
-								"id": "KZ",
-								"title": "Free Land 41",
-								"color": "rgba(255,0,0,0.8)"
-							}
+							// Add any other countries here
 						]
 					},
 					"balloon": {
